<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/color_black1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/weather_hot_ic" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/demo_location"
                android:textSize="@dimen/location_size" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/demo_temp"
                android:textColor="@color/color_white"
                android:textSize="@dimen/date_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/temperature"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_temp"
                android:textSize="@dimen/temperature_size" />

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo_temp"
                android:textSize="@dimen/weather_text" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableRow>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_humidity" />

                    <TextView
                        android:id="@+id/humidityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_no_data"
                        android:textColor="@color/color_white"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_visibility" />

                    <TextView
                        android:id="@+id/visiValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_no_data"
                        android:textColor="@color/color_white"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_wind_speed" />

                    <TextView
                        android:id="@+id/windSpeedValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_no_data"
                        android:textColor="@color/color_white"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_sunrise" />

                    <TextView
                        android:id="@+id/tv_sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_no_data"
                        android:textColor="@color/color_white"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/str_sunset" />

                    <TextView
                        android:id="@+id/tv_sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_no_data"
                        android:textColor="@color/color_white"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/color_black1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/demo_temp" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/about_app"
            android:src="@drawable/g" />

        <TextView
            android:id="@+id/tv_low_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/demo_temp"
            android:textSize="@dimen/date_temp_size" />

        <TextView
            android:id="@+id/tv_max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/demo_temp"
            android:textSize="@dimen/date_temp_size" />
    </LinearLayout>

</RelativeLayout>